  * Convert packaging to dh7.
  * Convert packaging to source v3 (w/ quilt).
  * Add debian/README.source as a symlink to the quilt README.source
  * Convert all .files into .install.
  * Refresh patches as quilt format instead
  * Rewrite get-orig-source rules to parse the changelog for version info.
  * Drop any of the Top Secret Options build flags

 -- Mario Limonciello <superm1@ubuntu.com>  Thu, 21 Jan 2010 00:42:40 -0600

mythtv (0.22.0+fixes23527-0ubuntu1) lucid; urgency=low

  [ Mario Limonciello ]
  * New snapshot (r23527)
  * debian/mythtv-database.postinst:
    - If the mythtv.cnf conffile is missing, don't freak out. (LP: #477926)
  * debian/control:
    - Build depends on libvdpau-dev for armel too.  We don't know if
      tegra2's will be using VDPAU, but if they do, this will help.

  [ Thomas Mashos ]
  * Populate directories to hold videos in prefilled SQL file. (LP: #469583)

 -- Mario Limonciello <superm1@ubuntu.com>  Sun, 14 Feb 2010 19:13:55 -0600

mythtv (0.22.0+fixes23193-0ubuntu1) lucid; urgency=low

  * New snapshot (r23193)
  * debian/patches/09_perl:
    - Correct the install path which broke when we renamed the packages.
      (LP: #498355)
  * debian/control:
    - Do the replaces for anything below 22958 to cover other PPA builds
      too. (LP: #498810)
  * debian/source_mythtv.py:
    - Update the hook to indicate whether the user has installed mythtv-dbg
      or mythplugins-dbg at the time of the crash.
  * debian/mythtv-common.links:
    - Create symlinks for the mythplugins and myththemes source packages to
      use the same apport hook as mythtv.
  * debian/rules:
    - Try harder to mark perl and python scripts executable.

 -- Mario Limonciello <superm1@ubuntu.com>  Tue, 19 Jan 2010 20:43:24 -0600

mythtv (0.22.0+fixes22957-0ubuntu2) lucid; urgency=low

  * debian/control:
    - Actually do the replaces for anything below 22957 instead to cover any
      PPA builds that people upgrade from or the very early lucid builds.