@@ -1,3 +1,5 @@
 usr/lib/libmyth*.so
 usr/lib/libmyth*.a
 usr/include/mythtv
+
+debian/mythtv.make usr/share/mythtv
