@@ -35,6 +35,7 @@ mythtv (0.23.0~trunk23548-0ubuntu1) UNRELEASED; urgency=low
   * Refresh patches as quilt format instead
   * Rewrite get-orig-source rules to parse the changelog for version info.
   * Drop any of the Top Secret Options build flags
+  * Include a custom snippet for debian/rules mythtv packages in libmyth-dev.
 
  -- Mario Limonciello <superm1@ubuntu.com>  Thu, 21 Jan 2010 00:42:40 -0600
 
